--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -242,7 +242,7 @@
   }
 
   .text-glow {
-    text-shadow: 0 0 20px hsl(41 52% 60% / 0.5);
+    text-shadow: 0 0 10px hsl(41 52% 60% / 0.7), 0 0 20px hsl(41 52% 60% / 0.5), 0 0 30px hsl(41 52% 60% / 0.3);
   }
 
   .bg-gradient-gold {
